# DeepChest

./: .gitignore  README.md  mlflow.db  pyproject.toml  requirements.txt  test_model.keras
.gradio/flagged/: dataset1.csv
artifacts/: leaderboard.json  per_class_metrics.csv
artifacts/model/: model.keras
config/: config.yaml
config/model_type/: cnn.yaml  densenet.yaml  efficientnet.yaml
config/models/: cnn.yaml  densenet.yaml  efficientnet.yaml
config/preprocessor/: preprocessor.yaml
config/training/: cnn.yaml  densenet.yaml  efficientnet.yaml
downloaded_model/model/: MLmodel  conda.yaml  requirements.txt
gradio_app/: app.py
notebooks/: Colab_training.ipynb  EDA and Quick Prototyping.ipynb  Untitled.ipynb  Untitled1.ipynb
scripts/: evaluation.py  evaluationv0.py  inference.py  l_test.py  pipeline.py  preps.py  training.py  training_eff_test.py  training_test.py  trainingv0.py
src/deep_chest/core/: paths.py
src/deep_chest/evaluation/: evaluator.py
src/deep_chest/inference/: base.py  builder.py  pipeline.py
src/deep_chest/infra/: config.py  logging.py  tracking.py  utils.py
src/deep_chest/losses/: weighted_bce.py
src/deep_chest/models/: cnn.py  densenet121.py  efficient_net.py  registry.py  simple_cnn.py  simple_cnnv0.py
test_model/: metadata.json
tests/evaluation/: test_evaluation.py
tests/inference/: test_inference.py
tests/models/: test_cnn.py  test_efficientnet.py
tests/preprocessors/: test_data_module.py
tests/training/: test_callbacks.py  test_losses.py  test_trainer.py
tracking/: leaderboard.json
(+167 files in other folders)
