[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_chest"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "hydra-core", # see later
  "mlflow",
  "pandas",
  "numpy",
  "tensorflow",
  "scikit-learn",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
